add script: clean auctions data

--- a/notebooks/clean_commodities.ipynb
+++ b/notebooks/clean_commodities.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "# Read commodities from file\n",
     "\n",
-    "commodities_df = pd.read_csv('../data/commodities/d16_h02_commodities.csv', index_col = 0)\n",
+    "commodities_df = pd.read_csv('../data/commodities/d16_h11_commodities.csv', index_col = 0)\n",
     "\n",
     "print(commodities_df.shape)\n",
     "\n",
@@ -96,7 +96,7 @@
    "source": [
     "# Group by item_id and sum quantity\n",
     "\n",
-    "commodities_df = commodities_df.groupby('item_id').agg({'unit_price': 'min', 'timestamp': 'first', 'quantity': 'sum'})\n",
+    "commodities_df = commodities_df.groupby('item_id').agg({'unit_price': np.min, 'timestamp': 'first', 'quantity': np.sum})\n",
     "\n",
     "commodities_df"
    ]
