update script: get wow api auctions data

--- a/notebooks/clean_auctions.ipynb
+++ b/notebooks/clean_auctions.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "# Read auctions from file\n",
     "\n",
-    "auctions_df = pd.read_csv('../data/auctions/d16_h11_auctions.csv', index_col = 0)\n",
+    "auctions_df = pd.read_csv('../data/auctions/d16_h15_auctions.csv', index_col = 0)\n",
     "\n",
     "print(auctions_df.shape)\n",
     "\n",
@@ -110,6 +110,8 @@
     "auctions_df.rename(columns = {'buyout': 'unit_price'}, inplace = True)\n",
     "\n",
     "auctions_df.reset_index(inplace = True)\n",
+    "\n",
+    "auctions_df = auctions_df[['item_id', 'quantity', 'unit_price', 'timestamp']]\n",
     "\n",
     "auctions_df"
    ]
