fix: timestamp parsing + int conversion

--- a/notebooks/api_get_auctions.ipynb
+++ b/notebooks/api_get_auctions.ipynb
@@ -115,7 +115,7 @@
     "   \n",
     "file_stamp = stamp_string(ravencrest_df.iloc[:1, 6])\n",
     "\n",
-    "ravencrest_df.to_csv(f'../data/auctions/{file_stamp}_auctions.csv')"
+    "ravencrest_df.to_csv(f'../data/auctions/{file_stamp}_auctions.csv', index = False, date_format = '%Y-%m-%d %H:%M:%S')"
    ]
   }
  ],
