--- a/notebooks/api_get_commodities.ipynb
+++ b/notebooks/api_get_commodities.ipynb
@@ -115,7 +115,7 @@
     "   \n",
     "file_stamp = stamp_string(commodities_df.iloc[:1, 5])\n",
     "\n",
-    "commodities_df.to_csv(f'../data/commodities/{file_stamp}_commodities.csv')"
+    "commodities_df.to_csv(f'../data/commodities/{file_stamp}_commodities.csv', index = False, date_format = '%Y-%m-%d %H:%M:%S')"
    ]
   }
  ],
