--- a/notebooks/clean_commodities.ipynb
+++ b/notebooks/clean_commodities.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "# Read commodities from file\n",
     "\n",
-    "commodities_df = pd.read_csv('../data/commodities/d16_h11_commodities.csv', index_col = 0)\n",
+    "commodities_df = pd.read_csv('../data/commodities/d17_h09_commodities.csv', parse_dates = ['timestamp'])\n",
     "\n",
     "print(commodities_df.shape)\n",
     "\n",
@@ -83,7 +83,7 @@
     "     \n",
     "price_weighted_median = commodities_df.groupby('item_id').apply(lambda x: weighted_median(x)).reset_index(name = 'weighted')\n",
     "\n",
-    "price_weighted_median['weighted'] = price_weighted_median['weighted'].astype(int)\n",
+    "price_weighted_median['weighted'] = price_weighted_median['weighted'].astype('int64')\n",
     "\n",
     "price_weighted_median"
    ]
