add script: api get items data

--- a/notebooks/api_check_single_item.ipynb
+++ b/notebooks/api_check_single_item.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Check Single Item"
+    "# Api Check Single Item"
    ]
   },
   {
