add script: api get items media

--- a/notebooks/api_get_items_media.ipynb
+++ b/notebooks/api_get_items_media.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Api Get Items Data"
+    "# Api Get Items Media"
    ]
   },
   {
@@ -21,6 +21,17 @@
     "import requests\n",
     "import re\n",
     "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pandas options\n",
+    "\n",
+    "pd.set_option('display.max_colwidth', None)"
    ]
   },
   {
@@ -80,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get items data from Api\n",
+    "# Get items media from Api\n",
     "\n",
     "def get_item(ids):\n",
     "   items = []\n",
@@ -101,30 +112,19 @@
     "   for item_id in ids:\n",
     "      try:\n",
     "         # Api call\n",
-    "         search = f'https://eu.api.blizzard.com/data/wow/item/{item_id}?namespace=static-eu&access_token={token}'\n",
+    "         search = f'https://eu.api.blizzard.com/data/wow/media/item/{item_id}?namespace=static-eu&locale=en_GB&access_token={token}'\n",
     "         response = requests.get(search)\n",
     "         item_body = response.json()\n",
     "         item_object = {}\n",
     "         # Handle 404 items\n",
     "         if 'code' in item_body.keys():\n",
     "            if item_body['code'] == 404:\n",
-    "               items.append({'ID': item_id, 'NAME': 'UNKNOWN', 'QUALITY': 'UNKNOWN', 'LEVEL': 0, 'ITEM CLASS': 'UNKNOWN', 'ITEM SUBCLASS': 'UNKNOWN', 'DESCRIPTION': 'UNKNOWN'})\n",
+    "               items.append({'item_id': item_id, 'media': 'UNKNOWN', 'link': 'UNKNOWN'})\n",
     "         else:\n",
     "            # Transform item objects\n",
     "            item_object['item_id'] = item_id\n",
-    "            item_object['name'] = item_body['name']['en_GB']\n",
-    "            item_object['quality'] = item_body['quality']['name']['en_GB']\n",
-    "            item_object['level'] = item_body['level']\n",
-    "            item_object['item_class'] = item_body['item_class']['name']['en_GB']\n",
-    "            item_object['item_subclass'] = item_body['item_subclass']['name']['en_GB']\n",
-    "            if 'description' in item_body:\n",
-    "               item_object['description'] = re.sub(r'\\s+', ' ', item_body['description']['en_GB'])\n",
-    "            elif 'spells' in item_body['preview_item']:\n",
-    "               item_object['description'] = re.sub(r'\\s+', ' ', item_body['preview_item']['spells'][0]['description']['en_GB'])\n",
-    "            elif len(re.findall('description', json.dumps(item_body))) > 0:\n",
-    "               item_object['description'] = 'CHECK description'\n",
-    "            else:\n",
-    "               item_object['description'] = 'no description'\n",
+    "            item_object['media'] = item_body['assets'][0]['key']\n",
+    "            item_object['link'] = item_body['assets'][0]['value']\n",
     "            # Build list of items\n",
     "            items.append(item_object)\n",
     "\n",
@@ -177,9 +177,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Check for media types\n",
+    "\n",
+    "items_df['media'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Check 404\n",
     "\n",
-    "items_df[items_df['name'] == 'UNKNOWN']"
+    "items_df[items_df['media'] == 'UNKNOWN']"
    ]
   },
   {
@@ -190,7 +201,7 @@
    "source": [
     "# Count 404\n",
     "\n",
-    "items_df[items_df['name'] == 'UNKNOWN'].shape[0]"
+    "items_df[items_df['media'] == 'UNKNOWN'].shape[0]"
    ]
   },
   {
@@ -201,7 +212,7 @@
    "source": [
     "# Save to file\n",
     "\n",
-    "items_df.to_csv('../data/items_data_new.csv', index = False)"
+    "items_df.to_csv('../data/items_media_new.csv', index = False)"
    ]
   }
  ],
