update weighted unit price calculation

--- a/notebooks/api_get_commodities.ipynb
+++ b/notebooks/api_get_commodities.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Api Get Commodities"
+    "# Api Get Commodities\n"
    ]
   },
   {
@@ -15,12 +15,13 @@
    "outputs": [],
    "source": [
     "# Imports\n",
-    "\n",
-    "import pandas as pd\n",
-    "import requests\n",
     "import re\n",
-    "\n",
-    "from datetime import datetime"
+    "import requests\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import datetime"
    ]
   },
   {
@@ -29,10 +30,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read access token\n",
+    "# Read credentials\n",
+    "with open('../api_credentials.txt', 'r') as file:\n",
+    "   text = file.read()\n",
     "\n",
-    "with open('../api_access_token.txt', 'r') as file:\n",
-    "   access_token = file.read()"
+    "credentials = re.findall('=(.*)', text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assign credentials\n",
+    "client_ID = credentials[0]\n",
+    "client_secret = credentials[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create access token\n",
+    "def create_access_token(client_ID, client_secret, region = 'eu'):\n",
+    "   data = {'grant_type': 'client_credentials'}\n",
+    "   response = requests.post('https://%s.battle.net/oauth/token' % region, data = data, auth = (client_ID, client_secret))\n",
+    "   return response.json()\n",
+    "\n",
+    "response = create_access_token(client_ID, client_secret)\n",
+    "access_token = response['access_token']"
    ]
   },
   {
@@ -42,36 +71,13 @@
    "outputs": [],
    "source": [
     "# Get commodity auctions data\n",
-    "\n",
     "def get_commodities(access_token):\n",
     "   search = f'https://eu.api.blizzard.com/data/wow/auctions/commodities?namespace=dynamic-eu&locale=en_GB&access_token={access_token}'\n",
     "   response = requests.get(search)\n",
     "   return response.json()['auctions']\n",
     "\n",
     "commodities_data = get_commodities(access_token)\n",
-    "\n",
-    "commodities_df = pd.DataFrame(commodities_data)\n",
-    "\n",
-    "commodities_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add timestamp\n",
-    "\n",
-    "now = datetime.now()\n",
-    "\n",
-    "date_str = now.strftime('%Y-%m-%d %H:%M:%S')\n",
-    "\n",
-    "commodities_df['timestamp'] = date_str\n",
-    "\n",
-    "commodities_df['timestamp'] = pd.to_datetime(commodities_df['timestamp'])\n",
-    "\n",
-    "commodities_df.head()"
+    "commodities_df = pd.DataFrame(commodities_data)"
    ]
   },
   {
@@ -81,10 +87,7 @@
    "outputs": [],
    "source": [
     "# Extract item ids\n",
-    "\n",
-    "commodities_df['item'] = commodities_df['item'].apply(lambda x: x['id'])\n",
-    "\n",
-    "commodities_df.head()"
+    "commodities_df['item'] = commodities_df['item'].apply(lambda x: x['id'])"
    ]
   },
   {
@@ -94,10 +97,8 @@
    "outputs": [],
    "source": [
     "# Rename columns\n",
-    "\n",
-    "commodities_df.rename(columns = {'id': 'auction_id', 'item': 'item_id'}, inplace = True)\n",
-    "\n",
-    "commodities_df.head()"
+    "commodities_df.rename(\n",
+    "   columns = {'id': 'auction_id', 'item': 'item_id'}, inplace = True)"
    ]
   },
   {
@@ -106,16 +107,133 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save commodities data to file\n",
+    "# Tansform prices into x.xx of golds\n",
+    "commodities_df['unit_price'] = commodities_df['unit_price'] / 10000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Severite Ore statistical summary\n",
+    "severite_ore = commodities_df[commodities_df['item_id'] == 190396]\n",
     "\n",
-    "def stamp_string(timestamp):\n",
-    "   day = re.findall('-(\\d.) ', str(timestamp))[0]\n",
-    "   hour = re.findall(' (\\d.):', str(timestamp))[0]\n",
-    "   return 'd' + day + '_h' + hour\n",
-    "   \n",
-    "file_stamp = stamp_string(commodities_df.iloc[:1, 5])\n",
+    "severite_ore.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Severite Ore remove outliers\n",
+    "Q1 = np.percentile(severite_ore['unit_price'], 25)\n",
+    "Q3 = np.percentile(severite_ore['unit_price'], 75)\n",
     "\n",
-    "commodities_df.to_csv(f'../data/commodities/{file_stamp}_commodities.csv', index = False, date_format = '%Y-%m-%d %H:%M:%S')"
+    "IQR = Q3 - Q1\n",
+    "\n",
+    "lower_bound = Q1 - 1.5 * IQR\n",
+    "upper_bound = Q3 + 1.5 * IQR\n",
+    "\n",
+    "severite_ore_outliers_removed = severite_ore[(severite_ore['unit_price'] >= lower_bound) & (severite_ore['unit_price'] <= upper_bound)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Severite Ore price distribution\n",
+    "sns.set_style('darkgrid')\n",
+    "sns.histplot(data = severite_ore_outliers_removed, x = 'unit_price', bins = 20, kde = True, color = 'purple')\n",
+    "\n",
+    "plt.xlabel('Price per Ore')\n",
+    "plt.ylabel('Number of Auctions')\n",
+    "plt.title('Serevite Ore Price Distribution')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove outliers from all items\n",
+    "def remove_outliers(df):\n",
+    "   df_clean = pd.DataFrame()\n",
+    "   for item_id in df['item_id'].unique():\n",
+    "      df_item = df[df['item_id'] == item_id]\n",
+    "      Q1 = df_item['unit_price'].quantile(0.25)\n",
+    "      Q3 = df_item['unit_price'].quantile(0.75)\n",
+    "      IQR = Q3 - Q1\n",
+    "      df_clean_item = df_item[(df_item['unit_price'] >= Q1 - 1.5 * IQR) & (df_item['unit_price'] <= Q3 + 1.5 * IQR)]\n",
+    "      df_clean = pd.concat([df_clean, df_clean_item])\n",
+    "   return df_clean\n",
+    "\n",
+    "commodities_wo_outliers = remove_outliers(commodities_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group items by price and count auctions + quantities\n",
+    "commodities_counted = commodities_wo_outliers.groupby(['item_id', 'unit_price']).agg(\n",
+    "   auction_count = ('quantity', 'count'), total_quantity = ('quantity', 'sum')).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the weighted average 'unit_price' (weights: 'auction_count' + 'total_quantity')\n",
+    "def weighted_average(x):\n",
+    "   return (x['unit_price'] * x['auction_count'] * x['total_quantity']).sum() / (x['auction_count'] * x['total_quantity']).sum()\n",
+    "\n",
+    "commodities_weighted = commodities_counted.groupby('item_id').apply(weighted_average)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by 'item_id' and merge weigthed average prices\n",
+    "commodities_final = commodities_counted.groupby('item_id').agg({'unit_price': np.mean, 'auction_count': np.sum, 'total_quantity': np.sum}).reset_index()\n",
+    "commodities_final = commodities_final.merge(commodities_weighted.rename('weighted'), on = 'item_id')\n",
+    "commodities_final = commodities_final[['item_id', 'auction_count', 'total_quantity', 'unit_price', 'weighted']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add timestamp\n",
+    "now = datetime.datetime.now()\n",
+    "date_str = now.strftime('%Y-%m-%d %H:%M:%S')\n",
+    "commodities_final['timestamp'] = pd.to_datetime(date_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commodities_final"
    ]
   }
  ],
@@ -135,14 +253,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.2"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "5238573367df39f7286bb46f9ff5f08f63a01a80960060ce41e3c79b190280fa"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
